--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="background-image" role="img" aria-label="people in work group"> </span>
     </section>
     <main class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook on desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
